# Generated by Django 5.2.13 on 2026-04-19 08:02

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('social', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Comment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('external_id', models.CharField(max_length=128)),
                ('author_handle', models.CharField(blank=True, max_length=128)),
                ('body', models.TextField()),
                ('language', models.CharField(choices=[('uz', "O'zbek"), ('ru', 'Русский'), ('en', 'English'), ('xx', 'Boshqa')], db_index=True, default='xx', max_length=2)),
                ('likes', models.PositiveIntegerField(default=0)),
                ('published_at', models.DateTimeField(db_index=True)),
                ('post', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='comments', to='social.post')),
            ],
            options={
                'ordering': ['-published_at'],
                'indexes': [models.Index(fields=['post', '-published_at'], name='collectors__post_id_fc13ca_idx')],
                'unique_together': {('post', 'external_id')},
            },
        ),
    ]
