erDiagram
    USER ||--o{ SOCIAL_ACCOUNT : "ega"
    USER ||--o{ ACTIVITY_LOG : "harakatlari"
    USER ||--o{ ALERT : "bildirishnomalar"
    USER ||--o{ SAVED_VIEW : "filterlari"
    SOCIAL_ACCOUNT ||--o{ POST : "joylaydi"
    SOCIAL_ACCOUNT ||--o{ FOLLOWER_SNAPSHOT : "vaqtga bog'liq"
    POST ||--o{ COMMENT : "uchun yoziladi"
    COMMENT ||--o| SENTIMENT_RESULT : "tahlil"

    USER {
        int id PK
        string email UK
        string language
        string timezone
        string totp_secret "Fernet"
        bool totp_enabled
        bool is_demo
        datetime created_at
    }

    SOCIAL_ACCOUNT {
        int id PK
        int user_id FK
        string platform
        string handle
        string external_id
        binary access_token "Fernet"
        binary refresh_token "Fernet"
        int follower_count
        bool is_active
        bool is_demo
    }

    POST {
        int id PK
        int account_id FK
        string external_id UK
        string post_type
        text caption
        url url
        int likes
        int views
        int comments_count
        int shares
        float engagement_rate
        datetime published_at
    }

    COMMENT {
        int id PK
        int post_id FK
        string author_handle
        text body
        string language
        int likes
        datetime published_at
    }

    SENTIMENT_RESULT {
        int id PK
        int comment_id FK
        string label
        float score
        string model_name
    }

    FOLLOWER_SNAPSHOT {
        int id PK
        int account_id FK
        date date
        int count
    }

    ALERT {
        int id PK
        int account_id FK
        string metric
        string direction
        string severity
        float z_score
        string message
    }

    ACTIVITY_LOG {
        int id PK
        int user_id FK
        string kind
        string message
        json meta
        string ip
    }

    SAVED_VIEW {
        int id PK
        int user_id FK
        string page
        string name
        string query
    }
